[project]
name = "backtesting-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dash>=3.2.0",
    "gym>=0.26.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "plotly>=6.3.0",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.3.2",
    "tensorboard>=2.14.0",
    "torch>=1.13,<2.0",
    "torchvision>=0.14.1",
    "yfinance>=0.2.65",
]
